<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/begin_date"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:editable="false"
            android:gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etDate"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sort_order"
            android:id="@+id/textView2"
            android:layout_below="@+id/etDate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_marginTop="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spSortOrder"
            android:layout_alignTop="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:entries="@array/spinnerItems"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/news_desk"
            android:id="@+id/textView3"
            android:layout_below="@+id/spSortOrder"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arts"
            android:id="@+id/cbArts"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:id="@+id/cbSports"
            android:layout_below="@+id/cbArts"
            android:layout_alignLeft="@+id/cbArts"
            android:layout_alignStart="@+id/cbArts" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education"
            android:id="@+id/cbEducation"
            android:layout_below="@+id/cbSports"
            android:layout_alignLeft="@+id/cbSports"
            android:layout_alignStart="@+id/cbSports"
            android:layout_marginBottom="75dp"/>

        <Button
            android:layout_marginBottom="10dp"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/clear"
            android:layout_alignBottom="@+id/etDate"
            android:layout_alignRight="@+id/etDate"
            android:layout_alignEnd="@+id/etDate" />

    </RelativeLayout>
</ScrollView>
